<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".activity.SelectBuyerSellerActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/selectbuyerseller_background">

        <!--<customfonts.MyTextView-->
        <!--android:id="@+id/head"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Welcome"-->
        <!--android:textColor="#000"-->
        <!--android:textSize="34dp"-->
        <!--android:gravity="center"-->
        <!--android:layout_centerInParent="true"-->
        <!--/>-->

    </FrameLayout>

    <LinearLayout
        android:id="@+id/selectbuyerseller_linearlayout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingBottom="60dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:lines="1"
            android:text="@string/get_connected_with"
            android:textColor="#9d9ea0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:lines="2"
            android:paddingBottom="21dp"
            android:text="@string/the_best_agents"
            android:textColor="#9d9ea0" />


        <LinearLayout
            android:id="@+id/selectbuyerseller_linearlayout_buyer_or_seller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/selectbuyerseller_textview_buyerbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background_square_buyer"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/buyer"
                android:textColor="#fff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/selectbuyerseller_textview_sellerbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background_square_seller"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/seller"
                android:textColor="#fff"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25sp"
            android:layout_marginStart="25sp">

            <Button
                android:id="@+id/registerButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/don_t_have_an_account_click_here_to_register"
                android:textColor="@color/registerForAnAccountBlueLinkColor"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>



