<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/loginbuyer_framelayout_buyer"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/loginbuyer_linearlayout_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginbuyer_linearlayout_facebook_google"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loginbuyer_textview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/buyer_login"
            android:textColor="#4c565f"
            android:textSize="29sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/loginbuyer_textinputlayout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colortext"
            android:textColorHint="@color/colorhint">

            <EditText
                android:id="@+id/buyer_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:background="#0000"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_email"
                android:gravity="start"
                android:hint="@string/email"
                android:maxLength="30"
                android:padding="16dp"
                android:textColor="@color/colortext"
                android:textColorHint="@color/colorhint"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="#59d58d" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/loginbuyer_textinputlayout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colortext"
            android:textColorHint="@color/colorhint">

            <EditText
                android:id="@+id/buyer_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:background="#0000"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@color/colortext"
                android:textColorHint="@color/colorhint"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="#59d58d" />

        <LinearLayout
            android:id="@+id/loginbuyer_linearlayout_rememberme_forgotpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/loginbuyer_checkbox_rememberme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_weight="2"
                android:buttonTint="@color/colorhint"
                android:checked="false"
                android:text="@string/remember_me"
                android:textColor="@color/colorhint"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/loginbuyer_textview_forgotpassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2.3"
                android:text="@string/forgot_password"
                android:textColor="@color/colorhint"
                android:textSize="11sp" />

        </LinearLayout>

        <TextView

            android:id="@+id/loginbuyer_textview_signinbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_background_round_buyer"
            android:elevation="3dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/sign_in"
            android:textColor="#fff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/loginbuyer_textview_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:lines="1"
            android:text="@string/or"
            android:textColor="@color/colorhint" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginbuyer_linearlayout_facebook_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@drawable/fb_buttonbackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:src="@drawable/fb_symbol" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@drawable/google_buttonbackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:src="@drawable/google_symbol" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
